--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,5 +131,6 @@ dependencies {
     // 插件升级后出现kotlin-stdlib-jdk版本冲突在这里解决
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.20")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20")
+    api Libs.AndroidX.MultiDex.multiDex
 
 }
